--- a/project01/visualization_1/projet_baby.ipynb
+++ b/project01/visualization_1/projet_baby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9d2b8594",
    "metadata": {},
    "outputs": [],
@@ -29,12 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "432ea6da",
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -119,7 +117,7 @@
        "4       1  Aaron  1976   75       3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "38053256",
    "metadata": {
     "code_folding": [
@@ -239,7 +237,7 @@
        "4   Louise  2020    3807    0.007815"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "acb3998b",
    "metadata": {},
    "outputs": [],
@@ -330,19 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "id": "5af906a1",
    "metadata": {
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "300c3dab6bc84c6dbbfedf931d9f3b50",
+       "model_id": "2f71572508fd4ef3904ed5f4446a95c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,7 +352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "911e3c2ece4e43a1b2f64c96069b8a5a",
+       "model_id": "02aa1a5395ff49b5ae0251434e40e938",
        "version_major": 2,
        "version_minor": 0
       },
@@ -387,7 +383,7 @@
     ")\n",
     "\n",
     "# Drawing function\n",
-    "def make_chart(noms):  # -> penser à inserer traitement data dans la fonction \n",
+    "def make_chart(noms):  \n",
     "    \n",
     "    donnee=df_agg[df_agg.name.isin(noms)] # data\n",
     "    selector = alt.selection_multi(fields=['name']) # filter\n",
@@ -396,7 +392,7 @@
     "    chart=alt.Chart(donnee,\n",
     "             width=800,\n",
     "             height=400,\n",
-    "             title='Percentage of each name per year').mark_line(point=(donnee.year.nunique() == 1)).encode(\n",
+    "             title='Percentage of each name per year').mark_line(point=(donnee.year.nunique() <= 2)).encode(\n",
     "                                x='year:Q',\n",
     "                                y='percentage:Q',\n",
     "                                tooltip=['name','year','births','percentage'],\n",
@@ -408,7 +404,7 @@
     "    # Creation de l'histogram\n",
     "    histo = alt.Chart(donnee, width=800, height=200,\n",
     "                      title='Number of births for each name per year').mark_bar().encode(\n",
-    "        x='year:Q',#alt.X('births:Q', bin=alt.Bin(maxbins=100)),\n",
+    "        x='year:Q',\n",
     "        y='births:Q',\n",
     "        color='name:N',\n",
     "    ).transform_filter(selector)\n",
@@ -430,7 +426,7 @@
     "            if annee !='All' and select[0]=='Top':\n",
     "                l_noms=df_agg[df_agg.year==annee].nlargest(select[1],'births', keep='all').name.values\n",
     "            if annee !='All' and select[0]=='Bottom':\n",
-    "                l_noms=df_agg[df_agg.year==annee].nsmallest(select[1],'births', keep='first').name.values\n",
+    "                l_noms=df_agg[df_agg.year==annee].nsmallest(select[1],'births', keep='all').name.values\n",
     "            if annee =='All' and select[0]=='Top':\n",
     "                l_noms=list(d_freq.keys())[:select[1]]\n",
     "            if annee =='All' and select[0]=='Bottom':\n",
@@ -515,7 +511,7 @@
     ")\n",
     "\n",
     "# Drawing function\n",
-    "def make_chart(noms):  # -> penser à inserer traitement data dans la fonction \n",
+    "def make_chart(noms):   \n",
     "    # data selection\n",
     "    donnee=df_agg[df_agg.name.isin(noms)] # data\n",
     "    selector = alt.selection_multi(fields=['name']) # filter\n",
@@ -523,7 +519,7 @@
     "    # chart\n",
     "    chart=alt.Chart(donnee,\n",
     "             width=800,\n",
-    "             height=400).mark_line(point=(donnee.year.nunique() == 1)).encode(\n",
+    "             height=400).mark_line(point=(donnee.year.nunique() <= 1)).encode(\n",
     "                                x='year:Q',\n",
     "                                y='percentage:Q',\n",
     "                                tooltip=['name:N','year:Q','births:Q','percentage:Q'],\n",
@@ -531,7 +527,7 @@
     "                                color=alt.condition(selector, 'name:N', alt.value('lightgray'))\n",
     "                            ).add_selection(selector)\n",
     "    \n",
-    "    # histo diversite prenoms/an\n",
+    "    # bar plot of name diversity per year\n",
     "    diversity = alt.Chart(df_agg, width=800, height=200,\n",
     "                          title='Percentage of each name per year'\n",
     "                         ).mark_bar(color='darkblue').encode(x='year:Q',\n",
@@ -542,7 +538,7 @@
     "                            ).transform_aggregate(nbNameYear='count(name)',\n",
     "                                                  groupby=[\"year\"]\n",
     "                                                    )\n",
-    "    # nb naissance par an\n",
+    "    # lineplot of annual birth\n",
     "    annualbirth = alt.Chart(df_agg, width=800, height=200\n",
     "                           ).mark_line(color='red').encode(x='year:Q',\n",
     "                                                            y=alt.Y('birthsYear:Q', \n",
@@ -553,8 +549,9 @@
     "                                                                                birthsYear='sum(births)',\n",
     "                                                                                groupby=[\"year\"]\n",
     "                                                                                )\n",
-    "    # creation d'un plot communmix des\n",
+    "    # create a layer to link bar plot and lineplot with 2 y scales independant\n",
     "    down = alt.layer(diversity, annualbirth).resolve_scale(y = 'independent')\n",
+    "    \n",
     "    # Creation de l'histogram\n",
     "    histo = alt.Chart(donnee, width=800, height=200, title='Number of births for each name per year').mark_bar().encode(\n",
     "        x='year:Q',\n",
@@ -568,7 +565,7 @@
     "\n",
     "def visualisation(selection,annee,nom):\n",
     "    # get value form selectors\n",
-    "    if not (selection==annee==nom): # All selector are not None=>\n",
+    "    if not (selection==annee==nom): # All selector are not None\n",
     "        if selection:\n",
     "            select = selection.split(' ')\n",
     "            select[1] = int(select[1])\n",
@@ -580,7 +577,7 @@
     "            if annee !='All' and select[0]=='Top':\n",
     "                l_noms=df_agg[df_agg.year==annee].nlargest(select[1],'births', keep='all').name.values\n",
     "            if annee !='All' and select[0]=='Bottom':\n",
-    "                l_noms=df_agg[df_agg.year==annee].nsmallest(select[1],'births', keep='first').name.values\n",
+    "                l_noms=df_agg[df_agg.year==annee].nsmallest(select[1],'births', keep='all').name.values\n",
     "            if annee =='All' and select[0]=='Top':\n",
     "                l_noms=list(d_freq.keys())[:select[1]]\n",
     "            if annee =='All' and select[0]=='Bottom':\n",
@@ -625,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
