add opacity and display message if no data selected

--- a/project01/visualization_1/projet_baby.ipynb
+++ b/project01/visualization_1/projet_baby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9d2b8594",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "2d0ee588",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "(249113, 4)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "acb3998b",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "5af906a1",
    "metadata": {
     "code_folding": [],
@@ -338,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f71572508fd4ef3904ed5f4446a95c0",
+       "model_id": "67e7289586ef47aea2729c87d8731cdd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,7 +352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02aa1a5395ff49b5ae0251434e40e938",
+       "model_id": "89d699ec900147e4ba3ac9d6959016df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -406,7 +406,9 @@
     "                      title='Number of births for each name per year').mark_bar().encode(\n",
     "        x='year:Q',\n",
     "        y='births:Q',\n",
+    "        tooltip=['name','year','births','percentage'],\n",
     "        color='name:N',\n",
+    "        opacity=alt.value(0.7)\n",
     "    ).transform_filter(selector)\n",
     "\n",
     "    return chart & histo\n",
@@ -436,7 +438,10 @@
     "        else:\n",
     "            l_noms = [nom]\n",
     "        \n",
-    "        display(make_chart(l_noms))\n",
+    "        if (selection == None and annee == None) or len(l_noms) == 0:\n",
+    "            print(\"No data to display, select a Top/Bottom and a year or a name\")\n",
+    "        else:\n",
+    "            display(make_chart(l_noms))\n",
     "    \n",
     "    return None\n",
     "\n",
@@ -457,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "id": "e6dce70d",
    "metadata": {
     "code_folding": []
@@ -466,7 +471,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "858f8845b9c04adeaf75e1e5358fb925",
+       "model_id": "cce20104fd42464aa3c17b68b4a111a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -480,7 +485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf556bb3ea8d49b89b513203dd21ac2e",
+       "model_id": "ddf6b1bccc3b47b7ae3816a3e252995d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -519,7 +524,8 @@
     "    # chart\n",
     "    chart=alt.Chart(donnee,\n",
     "             width=800,\n",
-    "             height=400).mark_line(point=(donnee.year.nunique() <= 1)).encode(\n",
+    "             height=400,\n",
+    "            title='Percentage of each name per year').mark_line(point=(donnee.year.nunique() <= 1)).encode(\n",
     "                                x='year:Q',\n",
     "                                y='percentage:Q',\n",
     "                                tooltip=['name:N','year:Q','births:Q','percentage:Q'],\n",
@@ -529,7 +535,7 @@
     "    \n",
     "    # bar plot of name diversity per year\n",
     "    diversity = alt.Chart(df_agg, width=800, height=200,\n",
-    "                          title='Percentage of each name per year'\n",
+    "                          title='Names diversity and natality per year'\n",
     "                         ).mark_bar(color='darkblue').encode(x='year:Q',\n",
     "                            y=alt.Y('nbNameYear:Q', \n",
     "                                    axis=alt.Axis(title='Name diversity per year', \n",
@@ -556,7 +562,9 @@
     "    histo = alt.Chart(donnee, width=800, height=200, title='Number of births for each name per year').mark_bar().encode(\n",
     "        x='year:Q',\n",
     "        y='births:Q',\n",
-    "        color='name:N'\n",
+    "        color='name:N',\n",
+    "        tooltip=['name','year','births','percentage'],\n",
+    "        opacity=alt.value(0.7)\n",
     "    ).transform_filter(selector)\n",
     "\n",
     "    return chart & histo & down\n",
@@ -587,7 +595,10 @@
     "        else:\n",
     "            l_noms = [nom]\n",
     "\n",
-    "        display(make_chart(l_noms))\n",
+    "        if (selection == None and annee == None) or len(l_noms) == 0:\n",
+    "            print(\"No data to display, select a Top/Bottom and a year or a name\")\n",
+    "        else:\n",
+    "            display(make_chart(l_noms))\n",
     "    \n",
     "    return None\n",
     "\n",
@@ -622,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
