--- a/project01/visualization_1/projet_baby.ipynb
+++ b/project01/visualization_1/projet_baby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "9d2b8594",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "2d0ee588",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "(249113, 4)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,21 +300,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "acb3998b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ranking names on all years to filter on all years\n",
-    "d_freq = {}\n",
+    "d_percent = {}\n",
     "d_births = {}\n",
     "for key, gp in df_agg.groupby('name'):\n",
-    "    d_freq[key] = gp.percentage.sum()\n",
+    "    d_percent[key] = gp.percentage.sum()\n",
     "    d_births[key] = gp.births.sum()\n",
     "\n",
     "# sort the dict by value then key => if Same value, sort by name!\n",
-    "d_freq=dict(sorted(d_freq.items(), key=lambda x: x[1], reverse=True)) \n",
-    "d_births=dict(sorted(d_births.items(), key=lambda x: x[1], reverse=True))\n"
+    "d_fpercent = dict(sorted(d_percent.items(), key=lambda x: x[1], reverse=True)) \n",
+    "d_births = dict(sorted(d_births.items(), key=lambda x: x[1], reverse=True))\n"
    ]
   },
   {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "5af906a1",
    "metadata": {
     "code_folding": [],
@@ -338,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67e7289586ef47aea2729c87d8731cdd",
+       "model_id": "00dbe6c0929a445394c6b2a647ba5b2e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,7 +352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89d699ec900147e4ba3ac9d6959016df",
+       "model_id": "159ef236d2eb4b34bbbe6bde6b075a32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,7 +392,7 @@
     "    chart=alt.Chart(donnee,\n",
     "             width=800,\n",
     "             height=400,\n",
-    "             title='Percentage of each name per year').mark_line(point=(donnee.year.nunique() <= 2)).encode(\n",
+    "             title='Percentage of each name per year').mark_line(point=(donnee.year.nunique() <= 10)).encode(\n",
     "                                x='year:Q',\n",
     "                                y='percentage:Q',\n",
     "                                tooltip=['name','year','births','percentage'],\n",
@@ -429,10 +429,12 @@
     "                l_noms=df_agg[df_agg.year==annee].nlargest(select[1],'births', keep='all').name.values\n",
     "            if annee !='All' and select[0]=='Bottom':\n",
     "                l_noms=df_agg[df_agg.year==annee].nsmallest(select[1],'births', keep='all').name.values\n",
+    "            if annee !='All' and selection is None:\n",
+    "                l_noms=df_agg[df_agg.year==annee].name.values\n",
     "            if annee =='All' and select[0]=='Top':\n",
-    "                l_noms=list(d_freq.keys())[:select[1]]\n",
+    "                l_noms=list(d_percent.keys())[:select[1]]\n",
     "            if annee =='All' and select[0]=='Bottom':\n",
-    "                l_noms=list(d_freq.keys())[-select[1]:]\n",
+    "                l_noms=list(d_percent.keys())[-select[1]:]\n",
     "            if annee =='All' and select[0] is None:\n",
     "                l_noms = list(df_agg.name.unique())\n",
     "        else:\n",
@@ -525,7 +527,7 @@
     "    chart=alt.Chart(donnee,\n",
     "             width=800,\n",
     "             height=400,\n",
-    "            title='Percentage of each name per year').mark_line(point=(donnee.year.nunique() <= 1)).encode(\n",
+    "            title='Percentage of each name per year').mark_line(point=(donnee.year.nunique() <= 10)).encode(\n",
     "                                x='year:Q',\n",
     "                                y='percentage:Q',\n",
     "                                tooltip=['name:N','year:Q','births:Q','percentage:Q'],\n",
@@ -586,10 +588,12 @@
     "                l_noms=df_agg[df_agg.year==annee].nlargest(select[1],'births', keep='all').name.values\n",
     "            if annee !='All' and select[0]=='Bottom':\n",
     "                l_noms=df_agg[df_agg.year==annee].nsmallest(select[1],'births', keep='all').name.values\n",
+    "            if annee !='All' and selection is None:\n",
+    "                l_noms=df_agg[df_agg.year==annee].name.values\n",
     "            if annee =='All' and select[0]=='Top':\n",
-    "                l_noms=list(d_freq.keys())[:select[1]]\n",
+    "                l_noms=list(d_percent.keys())[:select[1]]\n",
     "            if annee =='All' and select[0]=='Bottom':\n",
-    "                l_noms=list(d_freq.keys())[-select[1]:]\n",
+    "                l_noms=list(d_percent.keys())[-select[1]:]\n",
     "            if annee =='All' and select[0] is None:\n",
     "                l_noms = list(df_agg.name.unique())\n",
     "        else:\n",
@@ -633,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
