--- a/project01/visualization_1/projet_baby.ipynb
+++ b/project01/visualization_1/projet_baby.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "9d2b8594",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "2d0ee588",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "(249113, 4)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "acb3998b",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "5af906a1",
    "metadata": {
     "code_folding": [],
@@ -338,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00dbe6c0929a445394c6b2a647ba5b2e",
+       "model_id": "85a20d86a19f45b2bed757ec85b476e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,7 +352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "159ef236d2eb4b34bbbe6bde6b075a32",
+       "model_id": "d8c9902ae97641898161593d2d368473",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "e6dce70d",
    "metadata": {
     "code_folding": []
@@ -473,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cce20104fd42464aa3c17b68b4a111a5",
+       "model_id": "24e4a93b8db2476aadd7d41d57e873fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -487,7 +487,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddf6b1bccc3b47b7ae3816a3e252995d",
+       "model_id": "cb437314a5364a5cb603961ce609a29f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -537,7 +537,7 @@
     "    \n",
     "    # bar plot of name diversity per year\n",
     "    diversity = alt.Chart(df_agg, width=800, height=200,\n",
-    "                          title='Names diversity and natality per year'\n",
+    "                          title='Names diversity and number of births per year'\n",
     "                         ).mark_bar(color='darkblue').encode(x='year:Q',\n",
     "                            y=alt.Y('nbNameYear:Q', \n",
     "                                    axis=alt.Axis(title='Name diversity per year', \n",
@@ -637,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
