add selector to the histogram

--- a/project01/visualization_1/projet_baby.ipynb
+++ b/project01/visualization_1/projet_baby.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "432ea6da",
    "metadata": {
     "code_folding": []
@@ -117,7 +117,7 @@
        "4       1  Aaron  1976   75       3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "5af906a1",
    "metadata": {
     "code_folding": [],
@@ -338,7 +338,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85a20d86a19f45b2bed757ec85b476e7",
+       "model_id": "475ed8a0d5244c22a02f876daab526e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,7 +352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8c9902ae97641898161593d2d368473",
+       "model_id": "7ab348cac74045fe8fe563bc06edc649",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,9 +407,9 @@
     "        x='year:Q',\n",
     "        y='births:Q',\n",
     "        tooltip=['name','year','births','percentage'],\n",
-    "        color='name:N',\n",
-    "        opacity=alt.value(0.7)\n",
-    "    ).transform_filter(selector)\n",
+    "        color='name:N',#alt.condition(selector, 'name:N', alt.value('lightgray')),\n",
+    "        opacity=alt.value(0.7)#alt.condition(selector, alt.value(0.7), alt.value(0.1))\n",
+    "    ).add_selection(selector).transform_filter(selector)\n",
     "\n",
     "    return chart & histo\n",
     "\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "e6dce70d",
    "metadata": {
     "code_folding": []
@@ -473,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24e4a93b8db2476aadd7d41d57e873fe",
+       "model_id": "a7946261c315445591e8a49feb272fe2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -487,7 +487,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb437314a5364a5cb603961ce609a29f",
+       "model_id": "a542b82fdf054e5eb60856092209b832",
        "version_major": 2,
        "version_minor": 0
       },
@@ -531,7 +531,6 @@
     "                                x='year:Q',\n",
     "                                y='percentage:Q',\n",
     "                                tooltip=['name:N','year:Q','births:Q','percentage:Q'],\n",
-    "                                #color = alt.Color('name:N')\n",
     "                                color=alt.condition(selector, 'name:N', alt.value('lightgray'))\n",
     "                            ).add_selection(selector)\n",
     "    \n",
@@ -564,10 +563,10 @@
     "    histo = alt.Chart(donnee, width=800, height=200, title='Number of births for each name per year').mark_bar().encode(\n",
     "        x='year:Q',\n",
     "        y='births:Q',\n",
-    "        color='name:N',\n",
     "        tooltip=['name','year','births','percentage'],\n",
+    "        color='name:N',\n",
     "        opacity=alt.value(0.7)\n",
-    "    ).transform_filter(selector)\n",
+    "    ).add_selection(selector).transform_filter(selector)\n",
     "\n",
     "    return chart & histo & down\n",
     "\n",
